cloud server update

--- a/config/transitclock.properties
+++ b/config/transitclock.properties
@@ -1,5 +1,5 @@
 transitclock.autoBlockAssigner.autoAssignerEnabled=true
-transitclock.autoBlockAssigner.ignoreAvlAssignments=false
+transitclock.autoBlockAssigner.ignoreAvlAssignments=true
 transitclock.autoBlockAssigner.allowableEarlySeconds=1200
 transitclock.autoBlockAssigner.allowableLateSeconds=1200
 
@@ -82,8 +82,7 @@ transitclock.timeout.pollingRateSecs=60
 transitclock.hibernate.configFile=/usr/local/transitclock/config/hibernate.cfg.xml
 transitclock.logging.dir=/usr/local/transitclock/logs
 transitclock.modules.optionalModulesList=org.transitclock.custom.traccar.TraccarAVLModule;org.transitclock.core.predAccuracy.PredictionAccuracyModule
-transitclock.avl.traccar.email=joshuasantiago111@gmail.com
+transitclock.avl.traccar.email=admin
 transitclock.avl.traccar.password=admin
-transitclock.avl.traccar.baseurl=http://45.55.84.20:8082/api
+transitclock.avl.traccar.baseurl=http://157.90.145.102/api
 transitclock.web.mapTileUrl=http://tile.openstreetmap.org/{z}/{x}/{y}.png
-
